infra/aws/defectdojo/main.tf
data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }
}

resource "aws_security_group" "defectdojo_sg" {
  name        = "${var.project_name}-${var.environment}-sg"
  description = "Security group for DefectDojo lab instance"

  ingress {
    description = "DefectDojo web UI"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]#[var.allowed_admin_cidr]
  }

  ingress {
    description = "Restricted SSH admin access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_admin_cidr]
  }

  egress {
    description = "Outbound internet access"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "defectdojo" {
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = "t3.medium"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.defectdojo_sg.id]

  user_data = <<-EOF
    #!/bin/bash
    set -e

    yum update -y
    yum install -y docker git

    systemctl enable docker
    systemctl start docker

    usermod -aG docker ec2-user

    curl -L "https://github.com/docker/compose/releases/download/v2.27.0/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
    chmod +x /usr/local/bin/docker-compose

    cd /opt
    git clone https://github.com/DefectDojo/django-DefectDojo.git defectdojo
    cd defectdojo

    /usr/local/bin/docker-compose up -d
  EOF

  metadata_options {
    http_endpoint = "enabled"
    http_tokens   = "required"
  }

  root_block_device {
    volume_size = 30
    volume_type = "gp3"
    encrypted   = true
  }

  tags = {
    Name        = "${var.project_name}-${var.environment}"
    Project     = var.project_name
    Environment = var.environment
    ManagedBy   = "Terraform"
    Purpose     = "VulnerabilityManagement"
  }
}
